--- a/lessons/css/leson32.css
+++ b/lessons/css/leson32.css
@@ -1,8 +1,9 @@
- /* самый простой и ефективный
+ /* самый простой и ефективный второй способ в хтмл
  * {
   margin: 0;
   padding: 0;
 } */
+
 
 
 
