--- a/Fitness/css/homework3.css
+++ b/Fitness/css/homework3.css
@@ -1,9 +1,10 @@
-.firstbox {
+.wraper {
   background: white;
   margin: 5px 7% 0px 7%;
-  padding-bottom:20px;
+  padding:0px  0px 20px 0px;
   border-left: 2px ridge #e7e7e7;
   border-right: 2px groove #e7e7e7;
+  width: auto;
 }
 /*------------- HEADER ------------- */
 header {
@@ -15,21 +16,24 @@ header > img {
 }
 header > ul {
   background-image: url(../img/panel.png);
+  width: 90%;
+
 
 }
 
 header > ul li {
 
   display: inline-block;
-  padding:10px;
+  padding: 10px 5% 10px 0px;
 
   height: 100%;
   width:auto;
 
 }
 header > ul li a {
-  margin: 40px;
+  margin: 40%;
   color: white;
+  text-decoration: none;
 }
 header > ul li:hover {
   border: 0px 1px 0px 1px;
@@ -39,6 +43,7 @@ header > ul li:hover {
 /*---------- CONTENT------------- */
 .conteiner {
     background: white;
+    display: inline-block;
 
 }
 
@@ -47,6 +52,8 @@ header > ul li:hover {
   margin-top: 0px;
   display: inline-block;
   float: left;
+  width: 20%;
+
   }
 .left_menu li {
   border: 1px solid #c8c8c8;
@@ -54,44 +61,55 @@ header > ul li:hover {
   width: 100%;
   padding: 10px;
 }
+.left_menu li a {
+  text-decoration: none;
+  color: grey;
+}
+.left_menu li a:hover {
+  text-decoration: none;
+  color: black;
+}
 .content {
   background: white;
-  display: inline-block;
-  float: top;
+  float: left;
+  width: 65%;
+}
+.content img {
+  padding: 5%;
+  border: 1px solid #c8c8c8;
+  width: inherit;
+  height: inherit;
+  margin-left: 5%;
+}
+.content p {
+  padding: 5% 0px 5% 10%;
+  width:70%;
 }
 
 /*------------- FOOTER---------- */
 
 footer {
-
   margin: 40px 40px 40px 40px;
-}
-
-footer > ul {
   background: #e1e1e1;
-
+  width: 90%;
+}
+footer > ul {
 
 }
-
 footer > ul li {
-
   display: inline-block;
-  padding:10px;
+  padding: 10px 5% 10px 0px;
 
   height: 100%;
-  width:10%;
-
-
+  width:auto;
 }
 footer > ul li a {
   margin: 20%;
   color: black;
+  text-decoration: none;
 }
-
 footer > ul li:last-child {
-  margin-left: 20%;
-
-
+  padding-left: 17%;
 }
 footer > ul li:hover {
   border: 0px 1px 0px 1px;
