--- a/Fitness/css/homework3.css
+++ b/Fitness/css/homework3.css
@@ -17,10 +17,7 @@ header > img {
 header > ul {
   background-image: url(../img/panel.png);
   width: auto;
-
-
 }
-
 header > ul li {
 
   display: inline-block;
@@ -28,7 +25,6 @@ header > ul li {
 
   height: 100%;
   width:10%;
-
 }
 header > ul li a {
   margin: 40%;
@@ -44,17 +40,14 @@ header > ul li:hover {
 .conteiner {
     background: white;
     display: inline-block;
-
 }
-
 .left_menu {
   margin: 40px;
   margin-top: 0px;
   display: inline-block;
   float: left;
   width: 20%;
-
-  }
+}
 .left_menu li {
   border: 1px solid #c8c8c8;
   display: block;
@@ -80,6 +73,11 @@ header > ul li:hover {
   width: 65%;
   height: 65%;
   margin-left: 5%;
+}
+ /* .img1 {
+  background-image: url(../img/bike.jpg);
+  width: 500px;
+  height: 300px; */
 }
 .content p {
   padding: 5% 0px 5% 10%;
