--- a/Fitness/css/homework31.css
+++ b/Fitness/css/homework31.css
@@ -4,7 +4,7 @@
   padding:0px  0px 20px 0px;
   border-left: 2px ridge #e7e7e7;
   border-right: 2px groove #e7e7e7;
-  width: auto;
+  width: 800px;
   }
 /*------------- HEADER ------------- */
 header {
@@ -33,14 +33,16 @@ header > ul li a {
   text-decoration: none;
 }
 header > ul li:hover {
-  border: 0px 1px 0px 1px;
+  border: 0px 5px 0px 5px;
   border-color: #838383;
+  background-image: url(../img/link.png);
 }
 
 /*---------- CONTENT------------- */
 .conteiner {
     background: white;
     display: inline-block;
+    width: 800px;
 }
 .clearfix:after {
   content: "";
@@ -67,18 +69,24 @@ header > ul li:hover {
 .left_menu li a:hover {
   text-decoration: none;
   color: black;
+  padding-left: 10px;
+}
+.left_menu li:nth-child(3) a {
+  color: black;
+  padding-left: 10px;
 }
 .content {
   background: white;
   float: right;
   width: 70%;
-  position: relative;
-
 }
 .content div img {
+  display: block;
   padding: 5%;
   border: 1px solid #c8c8c8;
-  width: auto;
+  margin-left: 10px;
+  width: 450px;
+
 }
 .content p {
   width:70%;
@@ -91,7 +99,7 @@ header > ul li:hover {
 footer {
   margin: 40px 40px 40px 40px;
   background: #e1e1e1;
-  width: inherit;
+  width: auto;
 }
 footer > ul {
 
@@ -108,11 +116,15 @@ footer > ul li a {
   color: black;
   text-decoration: none;
 }
+footer > ul li:nth-child(2) {
+  text-decoration: underline;
+}
+
 footer > ul li:last-child {
   padding-left: 10%;
   text-align: right;
 }
-footer > ul li:hover {
-  border: 0px 1px 0px 1px;
-  border-color: #838383;
+footer > ul li a:hover  {
+  text-decoration: underline;
+
 }
