--- a/Fitness/css/homework31.css
+++ b/Fitness/css/homework31.css
@@ -33,9 +33,12 @@ header > ul li a {
   text-decoration: none;
 }
 header > ul li:hover {
-  border: 0px 5px 0px 5px;
-  border-color: #838383;
   background-image: url(../img/link.png);
+  background-repeat: no-repeat;
+}
+header > ul li:nth-child(2){
+  background-image: url(../img/link.png);
+  background-repeat: no-repeat;
 }
 
 /*---------- CONTENT------------- */
@@ -89,9 +92,10 @@ header > ul li:hover {
 
 }
 .content p {
-  width:70%;
-  padding: 5% 0 5px 5%;
-  margin-left: 5%;
+  width:auto;
+  padding-left: 5%;
+  margin: 5% 7% 0 0;
+
 }
 
 /*------------- FOOTER---------- */
@@ -121,8 +125,10 @@ footer > ul li:nth-child(2) {
 }
 
 footer > ul li:last-child {
-  padding-left: 10%;
+  padding: 10px 1px 10px 25%;
   text-align: right;
+
+
 }
 footer > ul li a:hover  {
   text-decoration: underline;
