--- a/Fitness/css/homework31.css
+++ b/Fitness/css/homework31.css
@@ -26,23 +26,28 @@ header > ul {
 header > ul li {
 
   display: inline-block;
-  padding: 10px 5% 10px 0px;
-
+  padding: 10px 0px 10px 0px;
+  text-align: center;
   height: 100%;
-  width:10%;
+  width:15%;
 }
 header > ul li a {
-  margin: 40%;
   color: white;
   text-decoration: none;
+  font-size: 15px;
+
 }
 header > ul li:hover {
   background-image: url(../img/link.png);
   background-repeat: no-repeat;
+  background-size: 100%;
+  width: 15%;
 }
 header > ul li:nth-child(2){
   background-image: url(../img/link.png);
+  background-size: 100%;
   background-repeat: no-repeat;
+  width: 15%;
 }
 
 /*---------- CONTENT------------- */
@@ -72,6 +77,7 @@ header > ul li:nth-child(2){
 .left_menu li a {
   text-decoration: none;
   color: grey;
+  font-size: 13px;
 }
 .left_menu li a:hover {
   text-decoration: none;
@@ -96,6 +102,8 @@ header > ul li:nth-child(2){
 
 }
 .content p {
+  font-size: 13px;
+  line-height: 20px;
   width:auto;
   padding-left: 5%;
   margin: 5% 7% 0 0;
@@ -123,13 +131,15 @@ footer > ul li a {
   margin: 20%;
   color: black;
   text-decoration: none;
-}
+  font-size: 15px;
+  }
 footer > ul li:nth-child(2) {
   text-decoration: underline;
 }
 
 footer > ul li:last-child {
-  padding: 10px 1px 10px 25%;
+  font-size: 15px;
+  padding: 10px 1px 10px 20%;
   text-align: right;
 
 
