--- a/asiaholl/css/hw4.css
+++ b/asiaholl/css/hw4.css
@@ -13,7 +13,7 @@ p,div,a,li {
 <!-------------H E A D E R ----------------->
 
 header {
-  display: block;
+  display:inline-block;
   background-color: white;
 }
 header p {
@@ -28,14 +28,19 @@ header p {
   float: right;
 }
 .countries p {
-  text-align: center;
+  display: block;
+  width: 50px;
+  }
+.countries p a {
+  display: block;
   color: #128aa7;
   font-size: 10px;
+  width: auto;
 }
 
 .logo {
   float: left;
-  margin: 12% 12% 12% 3%;
+  margin: 5% 0 5% 3%;
   color: #128aa7;
   font-size: 12px;
   text-align: center;
@@ -53,8 +58,7 @@ header p {
   background-image: url(../img/panel.png);
   background-size: 100%;
   display: inline-block;
-  color: white;
-  font-size: 14px;
+  width: 100%;
 }
 
 .submenu {
@@ -66,13 +70,19 @@ header p {
     display: block;
 }
 .panel li {
+  display: inline-block;
   margin: 0 3% 0 3%;
   width: auto;
 }
 
+.panel li a {
+  color: white;
+  font-size: 14px;
+}
+
 <!------------C O N T A I N E R ------------>
 
-.inform {
+.inf {
   float: left;
   width: 210px;
   height: 100%;
@@ -80,7 +90,7 @@ header p {
   background-size: 100%;
   border-right: 1px solid #c7cacf;
 }
-.inform p {
+.inf p {
   border-bottom: 1px solid #c7cacf;
 }
 .news {
