--- a/asiaholl/css/hw4.css
+++ b/asiaholl/css/hw4.css
@@ -5,16 +5,18 @@ body {
 .wraper {
   margin: 3% 10% 2% 10%;
   background-color: white;
+  height: 100%;
   }
 p,div,a,li {
   font-family: Tahoma;
 }
 
-<!-------------H E A D E R ----------------->
+/*-------------H E A D E R -----------------*/
 
 header {
   display:inline-block;
   background-color: white;
+  width: 100%;
 }
 header p {
    float: right;
@@ -44,9 +46,6 @@ header p {
   color: #128aa7;
   font-size: 12px;
   text-align: center;
-}
-.logo p { align: top;}
-
 }
 .clearfix:after {
   content: "";
@@ -96,11 +95,13 @@ header p {
   line-height: 24px;
 }
 
-<!------------C O N T A I N E R ------------>
-
+/*------------C O N T A I N E R ------------*/
+.conteiner {
+  width: inherit;
+}
 .inf {
   float: left;
-  width: 210px;
+  width: 220px;
   height: 100%;
   background-image: url(../img/left_bground.png);
   background-size: 100%;
@@ -108,10 +109,11 @@ header p {
 }
 .inf p {
   border-bottom: 1px solid #c7cacf;
+  padding: 10px;
 }
 .news {
   float: right;
-  width: 210px;
+  width: 220px;
   height: 100%;
   background-image: url(../img/left_bground.png);
   background-size: 100%;
@@ -119,11 +121,13 @@ header p {
 }
 .news p {
   border-bottom: 1px solid #c7cacf;
+  padding: 10px;
 }
 .content {
-  margin-left: 210px;
-  margin-right: 210px;
+  margin-left: 220px;
+  margin-right: 220px;
   padding: 10px;
+  width: auto;
 }
 
 footer {
@@ -131,4 +135,5 @@ footer {
   text-align: center;
   font-size: 12px;
   color: white;
+  clear: both;
 }
