--- a/asiaholl/css/hw4.css
+++ b/asiaholl/css/hw4.css
@@ -1,11 +1,12 @@
 body {
   background-image: url(../img/background.jpg);
-  background-size: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
   }
 .wraper {
-  margin: 3% 10% 2% 10%;
+  margin: 18px 10% 2% 10%;
   background-color: white;
-  height: 100%;
+  height: auto;
   }
 p,div,a,li {
   font-family: Tahoma;
@@ -24,6 +25,7 @@ header p {
    color: #128aa7;
    font-size: 12px;
    text-align: left;
+   line-height: 24px;
 }
 .countries {
   display: inline-block;
@@ -31,13 +33,16 @@ header p {
 }
 .countries p {
   display: block;
-  width: 50px;
-  }
+  width: auto;
+  text-align: center;
+  font-size: 10px;
+}
 .countries p a {
   display: block;
   color: #128aa7;
   font-size: 10px;
   width: auto;
+  line-height: 0;
 }
 
 .logo {
@@ -46,6 +51,7 @@ header p {
   color: #128aa7;
   font-size: 12px;
   text-align: center;
+  line-height: 24px;
 }
 .clearfix:after {
   content: "";
@@ -98,35 +104,44 @@ header p {
 /*------------C O N T A I N E R ------------*/
 .conteiner {
   width: inherit;
+  overflow: hidden;
 }
 .inf {
   float: left;
-  width: 220px;
+  width: 210px;
   height: 100%;
   background-image: url(../img/left_bground.png);
   background-size: 100%;
   border-right: 1px solid #c7cacf;
+  margin-bottom: -20000px;
+  padding-bottom: 20000px;
 }
 .inf p {
   border-bottom: 1px solid #c7cacf;
-  padding: 10px;
+  padding: 15px;
+  line-height: 24px;
+  font-size: 14px;
 }
 .news {
   float: right;
-  width: 220px;
+  width: 210px;
   height: 100%;
   background-image: url(../img/left_bground.png);
   background-size: 100%;
   border-left: 1px solid #c7cacf;
+  margin-bottom: -20000px;
+  padding-bottom: 20000px;
 }
 .news p {
   border-bottom: 1px solid #c7cacf;
-  padding: 10px;
+  padding: 15px;
+  line-height: 24px;
+  font-size: 14px;
 }
 .content {
-  margin-left: 220px;
-  margin-right: 220px;
-  padding: 10px;
+  margin-left: 210px;
+  margin-right: 210px;
+  padding: 15px;
   width: auto;
 }
 
@@ -136,4 +151,5 @@ footer {
   font-size: 12px;
   color: white;
   clear: both;
+  padding-bottom: 15px;
 }
