--- a/Fitness/css/homework3.css
+++ b/Fitness/css/homework3.css
@@ -24,7 +24,7 @@ header > ul {
 }
 header > ul li {
   display: inline-block;
-  padding: 10px 3% 10px 0px;
+  padding: 10px 3% 10px 1px;
   height: 100%;
   width:auto;
 }
@@ -33,14 +33,14 @@ header > ul li a {
   color: white;
   text-decoration: none;
 }
-header > ul li:hover {
+header > ul li:hover{
   background-image: url(../img/link.png);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
 header > ul li:nth-child(2){
   background-image: url(../img/link.png);
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
