--- a/Fitness/css/homework3.css
+++ b/Fitness/css/homework3.css
@@ -24,11 +24,14 @@ header > ul {
 }
 header > ul li {
   display: inline-block;
-  padding: 10px 0px 10px 0px;
   height: 100%;
   width:15%;
 }
 header > ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding:5% 0 5% 20%;
   color: white;
   text-decoration: none;
   font-size: 15px;
@@ -36,14 +39,12 @@ header > ul li a {
 header > ul li:hover {
   background-image: url(../img/link.png);
   background-repeat: no-repeat;
-  background-size: 100%;
-  width: 15%;
+  background-size: cover;
 }
 header > ul li:nth-child(2){
   background-image: url(../img/link.png);
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
-  width: 15%;
 }
 
 /*---------- CONTENT------------- */
