--- a/bike/css/hw5.css
+++ b/bike/css/hw5.css
@@ -73,12 +73,32 @@
   color: white;
 }
 
+.line {
+  padding: 5px;
+  margin: 0 auto;
+  color: grey;
+}
+.line::before {
+  content: "";
+  height: 2px;
+  width: auto;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid black;
+}
+.line::after {
+  content: "";
+  width: auto;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid black;
+}
+
 .regbox input {
   display: block;
   margin: 10px auto;
   width: 50%;
   height: 40px;
   background-color: black;
+  border: 1px solid black;
   border-bottom: 1px solid grey;
   text-indent: 15px;
   font-size: 14px;
