--- a/dz5/css/hw5.css
+++ b/dz5/css/hw5.css
@@ -117,7 +117,7 @@
   margin: 10px auto;
   width: 30%;
   height: 40px;
-  background-color: linear-gradient (black, red);
+  background: linear-gradient (black, red);
   border: 1px solid lightblue;
   text-indent: 15px;
   font-size: 14px;
