--- a/dz3/css/homework3.css
+++ b/dz3/css/homework3.css
@@ -21,21 +21,23 @@ header > img {
   margin-top: 4%;
 }
 header > ul {
+  font-size: 0px;
   background-image: url(../img/panel.png);
   background-size: cover;
   width: auto;
 }
 header > ul li {
-  float: left;
-  display: inline-block;
+  display: block;
   height: 100%;
   width:15%;
 }
 header > ul li a {
   display: block;
   height: 100%;
-  padding:5% 5% 5% 20%;
+  width: auto;
+  padding:8% 5% 8% 10%;
   color: white;
+  text-align: center;
   text-decoration: none;
   font-size: 15px;
 }
@@ -59,7 +61,6 @@ header > ul li:nth-child(2){
     padding: 0;
 }
 .left_menu {
-  display: inline-block;
   float: left;
   width: 20%;
 }
@@ -89,12 +90,11 @@ header > ul li:nth-child(2){
   padding-left: 10px;
 }
 .content {
-  display: inline-block;
+  display:block;
   margin-left: 50px;
   background: white;
   float: left;
   width: 70%;
-  background: white;
 }
 .photo {
   padding: 25% 0 25% 0;
