--- a/dz4/css/hw4.css
+++ b/dz4/css/hw4.css
@@ -31,7 +31,7 @@ header p {
    line-height: 21px;
 }
 .countries {
-  display: inline-block;
+  display: block;
   float: right;
   clear: right;
 
@@ -47,7 +47,6 @@ header p {
   display: block;
   width: auto;
   color: #128aa7;
-  font-size: 10px;
   line-height: 0;
   font-size: 10px;
 }
@@ -109,10 +108,12 @@ header p {
 }
 .panel li {
   display: inline-block;
-  margin: 0 4% 0 3%;
   width: auto;
 }
 .panel li a {
+  display: block;
+  padding:  0 20% 0 20%;
+  width: 100%;
   color: white;
   font-size: 14px;
   line-height: 24px;
