--- a/dz5/css/hw5.css
+++ b/dz5/css/hw5.css
@@ -62,32 +62,30 @@
   background-color: rgba(0, 0, 0, 0.5);
   margin: 0 auto;
   padding-top: 20px;
-
 }
 .regbox button {
   display: block;
   margin: 20px auto;
   height: auto;
   width: auto;
-  border: 1px solid rgba(255, 0, 0, 0);
-  background-color: rgba(255, 0, 0, 0);
+  border: 1px solid white;
+  background-color: blue;
 }
-
 .line {
   padding: 5px;
-  margin: 0 auto;
+  margin: 1px auto;
   color: grey;
 }
-.line::before {
-  content: "";
+.line:before {
+  content: " ";
   height: 2px;
-  width: auto;
+  width: 100px;
   border-top: 1px solid grey;
   border-bottom: 1px solid black;
 }
-.line::after {
-  content: "";
-  width: auto;
+.line:after {
+  content: " ";
+  width: 100px;
   border-top: 1px solid grey;
   border-bottom: 1px solid black;
 }
@@ -117,7 +115,7 @@
   margin: 10px auto;
   width: 30%;
   height: 40px;
-  background: black;
+  background-color: black;
   border: 1px solid lightblue;
   text-indent: 15px;
   font-size: 14px;
