--- a/dz5/css/hw5.css
+++ b/dz5/css/hw5.css
@@ -53,6 +53,7 @@
 .wraper header {
   text-align: center;
   line-height: 60px;
+  font-size: 24px;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   margin: 5px auto;
@@ -65,11 +66,19 @@
 }
 .regbox button {
   display: block;
+  padding: 15px;
   margin: 20px auto;
-  height: auto;
-  width: auto;
   border: 1px solid white;
-  background-color: blue;
+  background: blue;
+  background: linear-gradient( top, blue 0%, red 100%);
+    background: -ms-linear-gradient( top, blue 0%, red 100%);
+      background: -webkit-linear-gradient( top, blue 0%, red 100%);
+        background: -o-linear-gradient( top, blue 0%, red 100%);
+          background: -moz-linear-gradient( top, blue 0%, red 100%);
+}
+.regbox p {
+  text-align: center;
+  color: white;
 }
 .line {
   padding: 5px;
@@ -111,22 +120,18 @@
   box-shadow: 0px 0px 12px 3px rgba(104,155,204,1);
 }
 .subbutton {
-  display: block;
   margin: 10px auto;
-  width: 30%;
-  height: 40px;
-  background-color: black;
+  padding: 15px;
+  background: blue;
+    background: linear-gradient(top, #e2e2e2 0%, red 50%, green 51%, yellow 100%);
+    background: -moz-linear-gradient(top, #e2e2e2 0%, red 50%, green 51%, yellow 100%);
+     background: -webkit-linear-gradient(top, #e2e2e2 0%, red 50%, green 51%, yellow 100%);
+      background: -o-linear-gradient(top, #e2e2e2 0%, red 50%, green 51%, yellow 100%);
+       background: -ms-linear-gradient(top, #e2e2e2 0%, red 50%, green 51%, yellow 100%);
   border: 1px solid lightblue;
   text-indent: 15px;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 15px;
   color: #ccc;
 }
-.regbox p {
-  text-align: center;
-  color: white;
-}
-.testtype {
-  text-align: center;
-  background: linear-gradient(red to blue);
-}
+
