--- a/dz3/css/homework3.css
+++ b/dz3/css/homework3.css
@@ -54,7 +54,7 @@ header > ul li:nth-child(2){
 /*---------- CONTENT------------- */
 
 .conteiner {
-  display: inline-block;
+  display: block;
     background: white;
     margin: 4% 0 7% 0;
     padding: 0;
@@ -66,23 +66,26 @@ header > ul li:nth-child(2){
 .left_menu li {
   display: block;
   width: 100%;
+  padding-right: 10px;
 }
 .left_menu li a {
   width: 100%;
-  padding: 10px;
   display: inline-block;
+  line-height: 36px;
   border: 1px solid #c8c8c8;
   text-decoration: none;
+  text-indent: 15px;
   color: grey;
 }
 .left_menu li a:nth-child(3) {
   background-color: #f9f9f9;
 }
 .left_menu li:hover {
-  background-color: #f9f9f9;
+
 }
 .left_menu li a:hover {
-  text-indent: 15px;
+  background-color: #f9f9f9;
+  text-indent: 30px;
   color: black;
 }
 .left_menu li a:nth-child(3) {
@@ -91,10 +94,10 @@ header > ul li:nth-child(2){
 }
 .content {
   display:block;
-  margin-left: 50px;
+  margin-left: 2%;
   background: white;
   float: right;
-  width: 70%;
+  width: 72%;
 }
 .photo {
   padding: 25% 0 25% 0;
