--- a/dz3/css/homework3.css
+++ b/dz3/css/homework3.css
@@ -34,18 +34,19 @@ header > ul li a {
   display: block;
   height: 100%;
   width: auto;
-  padding:8% 5% 8% 10%;
+  padding-right: 5%;
+  line-height: 36px;
   color: white;
   text-align: center;
   text-decoration: none;
   font-size: 15px;
 }
-header > ul li:hover {
+header > ul li a:hover {
   background-image: url(../img/link.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
-header > ul li:nth-child(2){
+header > ul li a:nth-child(2){
   background-image: url(../img/link.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -66,7 +67,6 @@ header > ul li:nth-child(2){
 .left_menu li {
   display: block;
   width: 100%;
-  padding-right: 10px;
 }
 .left_menu li a {
   width: 100%;
