--- a/dz3/css/homework3.css
+++ b/dz3/css/homework3.css
@@ -1,13 +1,13 @@
 .wraper {
   background: white;
-  margin: 5px 15% 0px 15%;
+  margin: 5px 14% 0px 14%;
   padding:0px  3% 20px 3%;
   border-left: 2px ridge #e7e7e7;
   border-right: 2px groove #e7e7e7;
   width: auto;
 }
 p,div,ul,li,a {
-  font-family:  Open Sans;
+  font-family:  Arial, sans-serif;
 }
 
 /*------------- HEADER ------------- */
@@ -35,7 +35,7 @@ header > ul li a {
   height: 100%;
   width: auto;
   padding-right: 5%;
-  line-height: 36px;
+  line-height: 40px;
   color: white;
   text-align: center;
   text-decoration: none;
@@ -62,7 +62,7 @@ header > ul li a:nth-child(2){
 }
 .left_menu {
   float: left;
-  width: 20%;
+  width: 27%;
 }
 .left_menu li {
   display: block;
@@ -71,8 +71,9 @@ header > ul li a:nth-child(2){
 .left_menu li a {
   width: 100%;
   display: inline-block;
-  line-height: 36px;
+  line-height: 40px;
   border: 1px solid #c8c8c8;
+  font-size: 12px;
   text-decoration: none;
   text-indent: 15px;
   color: grey;
@@ -88,19 +89,15 @@ header > ul li a:nth-child(2){
   text-indent: 30px;
   color: black;
 }
-.left_menu li a:nth-child(3) {
-  color: black;
-  text-indent: 15px;
-}
 .content {
   display:block;
   margin-left: 2%;
   background: white;
   float: right;
-  width: 72%;
+  width: 69%;
 }
 .photo {
-  padding: 25% 0 25% 0;
+  padding: 35% 0 35% 0;
   margin: 0;
   background-image: url(../img/bike.jpg);
   background-size: 80%;
@@ -109,6 +106,8 @@ header > ul li a:nth-child(2){
   border: 1px solid #c8c8c8;
 }
 .content p {
+  font-size: 12px;
+  line-height: 24px;
   padding: 5% 0 5px 25px;
 }
 
@@ -121,15 +120,17 @@ footer {
   clear: both;
 }
 footer > ul {
-  padding: 10px 10px 10px 0px;
+  padding: 7px 10px 7px 0px;
 }
 footer > ul li {
   display: inline-block;
   padding:10px;
   height: 100%;
+  font-size: 12px;
 }
 footer > ul li a {
   margin: 20%;
+  font-size: 12px;
   color: black;
   text-decoration: none;
 }
