--- a/dz4/css/hw4.css
+++ b/dz4/css/hw4.css
@@ -1,10 +1,10 @@
 body {
   background-image: url(../img/background.jpg);
   background-size: 100%;
-  background-repeat: no-repeat;
+  background-repeat: cover;
   }
 .wraper {
-  margin: 18px 10% 15px 10%;
+  margin: 3% 15% 15px 15%;
   height: auto;
   background-color: white;
 }
@@ -22,32 +22,30 @@ header {
 }
 
  /* C O N T A C T S */
-header p {
+.contacts {
    float: right;
-   margin: 11px 24px 0px 0px;
+   margin: 15px 11px 0px 0px;
    color: #128aa7;
    font-size: 12px;
    text-align: left;
    line-height: 21px;
 }
 .countries {
+  width: 35%;
   display: block;
   float: right;
   clear: right;
-
   font-size: 0px;
 }
 .countries p {
-  display: block;
+  display: inline-block;
+  margin:5% 1% 1% 1%;
   width: auto;
   text-align: center;
-  font-size: 0px;
 }
 .countries p a {
-  display: block;
   width: auto;
   color: #128aa7;
-  line-height: 0;
   font-size: 10px;
 }
 .logo {
@@ -82,6 +80,7 @@ header p {
   display: block;
   padding: 0 0 0 3%;
   width: 97%;
+  border-top: 1px solid grey;
   background-image: url(../img/panel.png);
   background-size: cover;
   -webkit-box-shadow: 2px 3px 25px 0px rgba(0,0,0,1);
