--- a/dz4/css/hw4.css
+++ b/dz4/css/hw4.css
@@ -1,15 +1,16 @@
 body {
+  background-color: #0c739f;
   background-image: url(../img/background.jpg);
-  background-size: 100%;
-  background-repeat: cover;
+  background-size: auto;
+  background-repeat: repeat-x;
   }
 .wraper {
-  margin: 3% 15% 15px 15%;
+  margin: 2% 15% 15px 15%;
   height: auto;
   background-color: white;
 }
 p,div,a,li {
-  font-family: Tahoma;
+  font-family: arial, sans-serif;
 }
 
 /*-------------H E A D E R -----------------*/
@@ -28,18 +29,20 @@ header {
    color: #128aa7;
    font-size: 12px;
    text-align: left;
-   line-height: 21px;
+   line-height: 24px;
 }
 .countries {
-  width: 35%;
+  width: 50%;
+  margin-right: 3%;
   display: block;
   float: right;
   clear: right;
   font-size: 0px;
+  text-align: right;
 }
 .countries p {
   display: inline-block;
-  margin:7% 1% 1% 1%;
+  margin:4% 0% 1% 3%;
   width: auto;
   text-align: center;
 }
@@ -51,7 +54,8 @@ header {
 .logo {
   position: relative;
   float: left;
-  margin: 2% 0% 0% 3%;
+  height: 100%;
+  margin: 1% 0% 0% 3%;
 }
 .logo p {
   position: absolute;
@@ -101,9 +105,6 @@ header {
   -moz-box-shadow: 2px 3px 25px 0px rgba(0,0,0,0.91);
   box-shadow: 2px 3px 25px 0px rgba(0,0,0,0.91);
 }
-.panel .submenu li a {
-  padding-left:-25px;
-}
 .panel > li:hover > ul.submenu {
     display: block;
 }
@@ -113,6 +114,7 @@ header {
 }
 .panel li a {
   display: block;
+  text-indent: 50px;
   width: 100%;
   color: white;
   font-size: 14px;
