--- a/dz4/css/hw4.css
+++ b/dz4/css/hw4.css
@@ -6,7 +6,6 @@ body {
   }
 .wraper {
   margin: 2% 15% 15px 15%;
-  height: auto;
   background-color: white;
 }
 p,div,a,li {
@@ -25,11 +24,11 @@ header {
  /* C O N T A C T S */
 .contacts {
    float: right;
-   margin: 15px 3% 0px 0px;
+   margin: 0 3% 0px 0px;
    color: #128aa7;
    font-size: 12px;
    text-align: left;
-   line-height: 24px;
+   line-height: 22px;
 }
 .countries {
   width: 50%;
@@ -42,7 +41,7 @@ header {
 }
 .countries p {
   display: inline-block;
-  margin:4% 0% 1% 3%;
+  margin:3% 0% 1% 3%;
   width: auto;
   text-align: center;
 }
@@ -55,7 +54,7 @@ header {
   position: relative;
   float: left;
   height: 100%;
-  margin: 1% 0% 0% 3%;
+  margin: 1% 0% -4px 3%;
 }
 .logo p {
   position: absolute;
