--- a/dz4/css/hw4.css
+++ b/dz4/css/hw4.css
@@ -5,7 +5,7 @@ body {
   background-repeat: repeat-x;
   }
 .wraper {
-  margin: 2% 15% 15px 15%;
+  margin: 2% 11% 15px 11%;
   background-color: white;
 }
 p,div,a,li {
@@ -24,7 +24,7 @@ header {
  /* C O N T A C T S */
 .contacts {
    float: right;
-   margin: 0 3% 0px 0px;
+   margin: 1% 3% 0px 0px;
    color: #128aa7;
    font-size: 12px;
    text-align: left;
@@ -54,7 +54,7 @@ header {
   position: relative;
   float: left;
   height: 100%;
-  margin: 1% 0% -4px 3%;
+  margin: 1% 0 -8px 3%;
 }
 .logo p {
   position: absolute;
