--- a/dz5/css/hw5.css
+++ b/dz5/css/hw5.css
@@ -8,17 +8,18 @@
 .first > ul {
   border-right: 1px solid #4f9ed6;
   margin-right: 2px;
-  padding-right: 20px;
+  width: 65%;
   float: right;
 }
 .first > ul li {
     display: inline-block;
+    float: right;
     line-height: 40px;
+    width:10%;
 }
 .first > ul li a {
-  display: block;
+  display: inline-block;
   text-indent: 20px;
-  text-align: center;
   width: 100%;
   height: 100%;
   color: #4f9ed6;
